--- a/index.html
+++ b/index.html
@@ -14,11 +14,29 @@
             text-transform: capitalize;
             text-align: center;
         }
+
+        img {
+            width: 50%;
+        }
+
+        footer {
+            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+            font-size: 2em;
+            color: blueviolet;
+            text-align: center;
+        }
     </style>
 </head>
 
 <body>
     <h1>Bienvenidos a Git y GitHub</h1>
+    <br>
+    <img src="imagenes/paisaje.jpeg">
+    <br>
+    <br>
+    <footer>
+        &copy;Mi primer bautizo con git
+    </footer>
 
 </body>
 
